2003-01-04 09:49  huysmans

	* settings/xfce_settings_plugin.c: Use inline icon

2003-01-02 12:34  huysmans

	* panel/xfce_support.c: Fix small bug in localized config file
	names

2002-12-31 12:20  huysmans

	* plugins/switcher/switcher.c: Resize on workspace
	creation/deletion

2002-12-31 12:12  huysmans

	* ChangeLog, Makefile.in, aclocal.m4, configure, icons/Makefile.am,
	icons/Makefile.in, panel/Makefile.in, plugins/Makefile.in,
	plugins/clock/Makefile.in, plugins/mailcheck/Makefile.in,
	plugins/switcher/Makefile.in, plugins/switcher/switcher.c,
	plugins/systembuttons/Makefile.in, plugins/trash/Makefile.in,
	settings/Makefile.in, settings/xfce_settings_dialog.c,
	settings/xfce_settings_plugin.c, themes/Makefile.in,
	themes/Crystal/Makefile.in, themes/Curve/Makefile.in,
	themes/Gnome/Makefile.in, themes/Noia/Makefile.in,
	themes/XFce/Makefile.in: Several fixes: minibuttons position,
	settings plugin icon and non-modal dialog, netk_pager sizing

2002-12-30 21:52  huysmans

	* panel/handle.c, plugins/switcher/switcher.c: Remove exit and
	iconify buttons from handles

2002-12-28 22:16  huysmans

	* panel/main.c: Fix SIGHUP handling. Thanks to Steganos for
	pointing it out

2002-12-28 09:54  huysmans

	* ChangeLog, TODO: Update ChangeLog and TODO file

2002-12-28 09:53  huysmans

	* plugins/switcher/switcher.c: Fix minibutton positioning

2002-12-27 16:25  huysmans

	* plugins/switcher/switcher.c: Fix size setting of graphical pager

2002-12-27 15:30  huysmans

	* plugins/switcher/switcher.c: Small fix to dialog

2002-12-27 15:08  huysmans

	* plugins/switcher/switcher.c: Add graphical pager option to
	switcher plugin

2002-12-24 11:56  huysmans

	* panel/: callbacks.c, callbacks.h, popup.c: Make ESC close popup
	menu

2002-12-23 10:27  huysmans

	* ChangeLog, panel/mcs_client.c, panel/mcs_client.h: Add missing
	files

2002-12-23 10:16  huysmans

	* Makefile.am, Makefile.in, configure, configure.ac,
	icons/Makefile.in, panel/Makefile.am, panel/Makefile.in,