@@ -1,3 +1,14 @@
+2003-01-08 13:27  huysmans
+
+	* panel/info.c, settings/xfce_settings_dialog.c: Use new dialog
+	header for settings plugin
+
+2003-01-05 16:55  huysmans
+
+	* ChangeLog, panel/global.h, panel/main.c, panel/mcs_client.c,
+	panel/xfce_support.c, panel/xfce_support.h,
+	settings/xfce_settings_dialog.c: Use dialogs from libxfcegui4
+
 2003-01-04 09:49  huysmans
 
 	* settings/xfce_settings_plugin.c: Use inline icon
